<resources>
    <string name="app_name">MiJournal</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="googleicon">googleicon</string>
    <string name="facebookicon">facebookicon</string>
    <string name="webclient_id">762670587896-bk2et71bhsgogkota52qk45c1j0khq97.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="facebook_app_id">1234</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>
    <string name="notes" />
    <string name="camera">Camera</string>
    <string name="notification_bell">notification bell</string>
    <string name="update">Update</string>
    <string name="floatingactionbutton">FloatingActionButton</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="title_of_your_story">Title of your story</string>
    <string name="enter_your_story">Enter your story</string>
    <string name="date">Date</string>
    <string name="add">add</string>
    <string name="enter_your_title">Enter your title</string>
    <string name="new_event">new event</string>
    <string name="delete_event">delete event</string>
    <string name="update_event">update event</string>
    <string name="schedule">schedule</string>
    <string name="enter_event_name_title">Enter event name/title</string>
    <string name="enter_schedule">Enter schedule</string>
    <string name="enter_date">Enter date</string>
    <string name="update_calendar">update calendar</string>
    <string name="calendar_picker">calendar picker</string>
    <string name="add_notes">add notes</string>
    <string name="notes_delete">notes delete</string>
    <string name="enter_notes">Enter notes</string>
    <string name="title">Title</string>
    <string name="id">id</string>


</resources>