<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    android:padding="20dp"
    tools:context=".SignUp">

    <EditText
        android:id="@+id/etEmailSignup"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginTop="224dp"
        android:background="#00BCD4"
        android:ems="10"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="Enter your email" />

    <EditText
        android:id="@+id/etPasswordSignup"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:background="#00BCD4"
        android:ems="10"
        android:hint="Enter your password"
        android:inputType="textPassword"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailSignup"
        android:autofillHints="Enter your password" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="250dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#F44336"
        android:text="SIGN UP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPasswordSignup" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="8dp"
        android:text="Sign up using:"
        android:textColor="#E91E63"
        android:textSize="12sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/btnGoogleIcon"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btnGoogleIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="84dp"
        android:background="#00FFFFFF"
        android:src="@drawable/googleicon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignup"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/googleicon" />

    <ImageButton
        android:id="@+id/btnFacebookIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:src="@drawable/facebookicon"
        app:layout_constraintBottom_toBottomOf="@+id/btnGoogleIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnGoogleIcon"
        app:layout_constraintTop_toTopOf="@+id/btnGoogleIcon"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/facebookicon" />
</androidx.constraintlayout.widget.ConstraintLayout>
